fix whitespace

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -5,7 +5,7 @@ $white-transparent-7: rgba(255, 255, 255, 0.7)
 
 html, body
     height: 100%
-    padding-top: 4vh
+    padding-top: 1.5em
 
 /** custom navbar CSS **/
 a
